--- a/install/debian/rules
+++ b/install/debian/rules
@@ -10,15 +10,15 @@ FPCDIR=
 # Get Package version and FPC version out of changelog file
 PACKAGEVERSION:=$(shell head -n 1 debian/changelog | awk '{ print $$2 }' | tr -d '[()]')
 FPCVERSION:=$(shell echo $(PACKAGEVERSION) | awk -F '-' '{ print $$1 }')
-FPC_MAIN_VERSION:=$(shell echo $(PACKAGEVERSION) | awk -F '\.[0-9]-' '{ print $$1 }')
 # Get directories	
 PWD:=$(shell pwd)
 BUILD_DIR=$(PWD)/debian/build
 INSTALL_DIR=$(PWD)/debian/tmp
 DOC_DIR=$(INSTALL_DIR)/usr/share/doc
-EXAMPLE_TEMP=$(INSTALL_DIR)/usr/doc/fpc-$(FPC_MAIN_VERSION)/examples
+EXAMPLE_TEMP=$(INSTALL_DIR)/usr/doc/fpc-$(FPCVERSION)/examples
 # Get utils
 NEWPP=$(PWD)/compiler/ppc386
+NEWFPDOC=$(PWD)/utils/fpdoc/fpdoc
 # Create default options
 BUILDOPTS=PP=$(NEWPP)
 INSTALLOPTS=PP=$(NEWPP) INSTALL_PREFIX=$(INSTALL_DIR)/usr
@@ -49,8 +49,6 @@ clean:
 	$(MAKE) -C docs clean
 
 	-(find . -name \*.a | xargs rm)
-
-	rm -f docs/syntax.sty
 
 	dh_clean
 
@@ -105,20 +103,27 @@ install-arch-stamp: build-arch-stamp debian-files-stamp
 	$(MAKE) utils_distinstall $(INSTALLOPTS)
 
 # Copy examples to the correct doc dir
-	install -d -m755 $(DOC_DIR)/fp-units-base/examples
-	install -d -m755 $(DOC_DIR)/fp-units-db/examples
 	install -d -m755 $(DOC_DIR)/fp-units-fcl/examples
-	install -d -m755 $(DOC_DIR)/fp-units-gfx/examples
 	install -d -m755 $(DOC_DIR)/fp-units-gtk/examples
-	install -d -m755 $(DOC_DIR)/fp-units-misc/examples
+	install -d -m755 $(DOC_DIR)/fp-units-gnome1/examples
+	install -d -m755 $(DOC_DIR)/fp-units-gfx/examples
+	install -d -m755 $(DOC_DIR)/fp-units-db/examples
 	install -d -m755 $(DOC_DIR)/fp-units-net/examples
-	install -d -m755 $(DOC_DIR)/fp-units-extra/examples
+	install -d -m755 $(DOC_DIR)/fp-units-misc/examples
+	install -d -m755 $(DOC_DIR)/fp-units-base/examples
 
 	mv -f $(EXAMPLE_TEMP)/fcl $(DOC_DIR)/fp-units-fcl/examples
 
 	mv -f $(EXAMPLE_TEMP)/gtk $(DOC_DIR)/fp-units-gtk/examples
+#	mv -f $(EXAMPLE_TEMP)/fpgtk $(DOC_DIR)/fp-units-gtk/examples
+
+#	mv -f $(EXAMPLE_TEMP)/imlib $(DOC_DIR)/fp-units-gnome1/examples
+	mv -f $(EXAMPLE_TEMP)/zvt $(DOC_DIR)/fp-units-gnome1/examples
+#	mv -f $(EXAMPLE_TEMP)/gnome $(DOC_DIR)/fp-units-gnome1/examples
+	mv -f $(EXAMPLE_TEMP)/gconf $(DOC_DIR)/fp-units-gnome1/examples
 
 	mv -f $(EXAMPLE_TEMP)/paszlib $(DOC_DIR)/fp-units-base/examples
+	mv -f $(EXAMPLE_TEMP)/pasjpeg $(DOC_DIR)/fp-units-base/examples
 	mv -f $(EXAMPLE_TEMP)/regexpr $(DOC_DIR)/fp-units-base/examples
 	mv -f $(EXAMPLE_TEMP)/ncurses $(DOC_DIR)/fp-units-base/examples
 
@@ -133,28 +138,23 @@ install-arch-stamp: build-arch-stamp debian-files-stamp
 	mv -f $(EXAMPLE_TEMP)/oracle $(DOC_DIR)/fp-units-db/examples
 	mv -f $(EXAMPLE_TEMP)/postgres $(DOC_DIR)/fp-units-db/examples
 	mv -f $(EXAMPLE_TEMP)/gdbm $(DOC_DIR)/fp-units-db/examples
-	mv -f $(EXAMPLE_TEMP)/netdb $(DOC_DIR)/fp-units-db/examples
 	mv -f $(EXAMPLE_TEMP)/odbc $(DOC_DIR)/fp-units-db/examples
 
-	mv -f $(EXAMPLE_TEMP)/cmem $(DOC_DIR)/fp-units-misc/examples
 	mv -f $(EXAMPLE_TEMP)/gdbint $(DOC_DIR)/fp-units-misc/examples
 	mv -f $(EXAMPLE_TEMP)/utmp $(DOC_DIR)/fp-units-misc/examples
 	mv -f $(EXAMPLE_TEMP)/syslog $(DOC_DIR)/fp-units-misc/examples
+	mv -f $(EXAMPLE_TEMP)/cdrom $(DOC_DIR)/fp-units-misc/examples
+	mv -f $(EXAMPLE_TEMP)/tcl $(DOC_DIR)/fp-units-misc/examples
 
 	mv -f $(EXAMPLE_TEMP)/inet $(DOC_DIR)/fp-units-net/examples
-	mv -f $(EXAMPLE_TEMP)/uncgi $(DOC_DIR)/fp-units-net/examples
-	
-	mv -f $(EXAMPLE_TEMP)/cdrom $(DOC_DIR)/fp-units-extra/examples
-	mv -f $(EXAMPLE_TEMP)/gconf $(DOC_DIR)/fp-units-extra/examples
-	mv -f $(EXAMPLE_TEMP)/tcl $(DOC_DIR)/fp-units-extra/examples
-	mv -f $(EXAMPLE_TEMP)/zvt $(DOC_DIR)/fp-units-extra/examples
+	mv -f $(EXAMPLE_TEMP)/netdb $(DOC_DIR)/fp-units-net/examples
 
 # Check if all examples are removed, if not then the rmdir will fail
 	rmdir $(EXAMPLE_TEMP)
 
 # Install man pages and RTL demos and whatsnew and readme
 	$(MAKE) man_install $(INSTALLOPTS) INSTALL_PREFIX=$(INSTALL_DIR)/usr/share
-	$(MAKE) demo_install $(INSTALLOPTS) INSTALL_DOCDIR=$(DOC_DIR)/fp-compiler
+	$(MAKE) demo_install $(INSTALLOPTS) INSTALL_SOURCEDIR=$(DOC_DIR)/fp-compiler
 	$(MAKE) doc_install $(INSTALLOPTS) INSTALL_DOCDIR=$(DOC_DIR)/fp-compiler
 
 # Create fpc.cfg which is included as conffile
@@ -167,7 +167,7 @@ arrange-arch: arrange-arch-stamp
 arrange-arch-stamp: install-arch-stamp debian-files-stamp
 	dh_testdir
 	dh_testroot
-	dh_movefiles -a
+	dh_install -a --sourcedir=debian/tmp --list-missing
 
 	touch arrange-arch-stamp
 
@@ -177,14 +177,12 @@ arrange-arch-stamp: install-arch-stamp debian-files-stamp
 #
 
 build-indep: build-indep-stamp
-build-indep-stamp: debian-files-stamp
+# We depend on the new fpdoc
+build-indep-stamp: debian-files-stamp build-arch-stamp
 	@echo "--- Building Documentation"
 	dh_testdir
 
-# We need our own syntax.sty (v1.9) which is not in the current tetex and
-# on ctan.org (PFV)
-	cp debian/syntax.sty docs
-	$(MAKE) -C docs $(DOCTYPE)
+	$(MAKE) -C docs $(DOCTYPE) FPDOC=$(NEWFPDOC) 
 
 	touch build-indep-stamp
 
@@ -209,7 +207,7 @@ build: build-arch build-indep
 
 install: install-arch install-indep
 
-binary: binary-indep binary-arch
+binary: binary-arch binary-indep 
 
 
 ###################
@@ -223,7 +221,7 @@ binary-indep: build-indep install-indep debian-files
 	dh_installdocs -i
 	dh_installchangelogs -i
 	dh_installchangelogs -pfp-docs logs/Changes.docs
-	dh_movefiles -i
+	dh_install -i --sourcedir=debian/tmp --list-missing
 	dh_compress -i -X.pdf
 	dh_fixperms -i
 	dh_installdeb -i
@@ -243,7 +241,6 @@ binary-arch: build-arch arrange-arch debian-files
 	dh_installchangelogs -pfp-units-fcl logs/Changes.fcl
 	dh_installchangelogs -pfp-utils logs/Changes.utils
 
-	dh_undocumented -a
 	dh_installexamples -a
 	dh_compress -a
 	dh_fixperms -a
