--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -37,6 +37,9 @@ endif
 ifeq ($(CPU_TARGET),alpha)
 PPSUF=axp
 endif
+ifeq ($(CPU_TARGET),arm)
+PPSUF=arm
+endif
 
 # cross compilers uses full cpu_target, not just ppc-suffix.
 ifneq ($(OS_TARGET),$(OS_SOURCE))
