--- a/compiler/Makefile.fpc
+++ b/compiler/Makefile.fpc
@@ -30,7 +30,7 @@ fpcdir=..
 unexport FPC_VERSION FPC_COMPILERINFO
 
 # Which platforms are ready for inclusion in the cycle
-CYCLETARGETS=i386 powerpc sparc
+CYCLETARGETS=i386 powerpc sparc arm
 
 # Allow ALPHA, POWERPC, M68K, I386 defines for target cpu
 ifdef ALPHA
