* Darwin is on equal foot as other BSD's   * BATCHEXT (for surce) renamed to SRCBATCHEXT   + New BATCHEXT dependant of target system   + New DEBUGSYMEXT for debugger symbol files   + Clean/cleanall also helpful when link on target

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -6,7 +6,7 @@
 #####################################################################
 # Autodetect OS (Linux or Dos or Windows NT or OS/2)
 # define inUnix when running under Unix like environment
-#               (Linux,FreeBSD,NetBSD,Cygwin)
+#               (Linux,FreeBSD,NetBSD,Darwin,Cygwin)
 # define inWinNT when running under WinNT
 # define inOS2 when running under OS/2
 # define inCygwin when running under Cygwin32
@@ -70,15 +70,18 @@ endif
 ifeq ($(OS_TARGET),openbsd)
 BSDhier=1
 endif
+ifeq ($(OS_TARGET),darwin)
+BSDhier=1
+endif
 
 # The extension of batch files / scripts
 ifdef inUnix
-BATCHEXT=.sh
+SRCBATCHEXT=.sh
 else
 ifdef inOS2
-BATCHEXT=.cmd
+SRCBATCHEXT=.cmd
 else
-BATCHEXT=.bat
+SRCBATCHEXT=.bat
 endif
 endif
 
@@ -405,6 +408,9 @@ endif
 ifeq ($(OS_TARGET),openbsd)
 UNIXINSTALLDIR=1
 endif
+ifeq ($(OS_TARGET),darwin)
+UNIXINSTALLDIR=1
+endif
 
 ifeq ($(OS_TARGET),sunos)
 UNIXINSTALLDIR=1
@@ -424,6 +430,9 @@ ifeq ($(OS_SOURCE),netbsd)
 UNIXINSTALLDIR=1
 endif
 ifeq ($(OS_SOURCE),openbsd)
+UNIXINSTALLDIR=1
+endif
+ifeq ($(OS_SOURCE),darwin)
 UNIXINSTALLDIR=1
 endif
 ifeq ($(OS_TARGET),sunos)
@@ -657,6 +666,7 @@ endif
 #####################################################################
 
 # Default needed extensions (Go32v2,Linux)
+BATCHEXT=.bat
 LOADEREXT=.as
 EXEEXT=.exe
 PPLEXT=.ppl
@@ -669,6 +679,7 @@ SHAREDLIBEXT=.so
 STATICLIBPREFIX=libp
 RSTEXT=.rst
 FPCMADE=fpcmade
+#DEBUGSYMEXT #for debugger symbol files, define only for targets which has this
 
 # 1.0.x has target specific extensions for ppu files and objects
 ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
@@ -700,6 +711,7 @@ endif
 
 # Linux
 ifeq ($(OS_TARGET),linux)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.lnx
@@ -708,6 +720,7 @@ endif
 
 # FreeBSD
 ifeq ($(OS_TARGET),freebsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.freebsd
@@ -716,6 +729,7 @@ endif
 
 # NetBSD
 ifeq ($(OS_TARGET),netbsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.netbsd
@@ -724,6 +738,7 @@ endif
 
 # OpenBSD
 ifeq ($(OS_TARGET),openbsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.openbsd
@@ -739,6 +754,7 @@ endif
 
 # OS/2
 ifeq ($(OS_TARGET),os2)
+BATCHEXT=.cmd
 AOUTEXT=.out
 STATICLIBPREFIX=
 SHAREDLIBEXT=.dll
@@ -749,6 +765,7 @@ endif
 
 # EMX
 ifeq ($(OS_TARGET),emx)
+BATCHEXT=.cmd
 AOUTEXT=.out
 STATICLIBPREFIX=
 SHAREDLIBEXT=.dll
@@ -772,6 +789,7 @@ endif
 
 # BeOS
 ifeq ($(OS_TARGET),beos)
+BATCHEXT=.sh
 EXEEXT=
 FPCMADE=fpcmade.be
 ZIPSUFFIX=be
@@ -779,6 +797,7 @@ endif
 
 # Solaris
 ifeq ($(OS_TARGET),sunos)
+BATCHEXT=.sh
 EXEEXT=
 FPCMADE=fpcmade.sun
 ZIPSUFFIX=sun
@@ -786,6 +805,7 @@ endif
 
 # QNX
 ifeq ($(OS_TARGET),qnx)
+BATCHEXT=.sh
 EXEEXT=
 FPCMADE=fpcmade.qnx
 ZIPSUFFIX=qnx
@@ -801,13 +821,16 @@ endif
 
 # MacOS
 ifeq ($(OS_TARGET),macos)
+BATCHEXT=
 EXEEXT=
 FPCMADE=fpcmade.macos
 ZIPSUFFIX=macos
+DEBUGSYMEXT=.xcoff
 endif
 
 # Darwin
 ifeq ($(OS_TARGET),darwin)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.darwin
@@ -846,6 +869,7 @@ endif
 
 # Linux
 ifeq ($(OS_TARGET),linux)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.lnx
@@ -854,6 +878,7 @@ endif
 
 # FreeBSD
 ifeq ($(OS_TARGET),freebsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.freebsd
@@ -862,6 +887,7 @@ endif
 
 # NetBSD
 ifeq ($(OS_TARGET),netbsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.netbsd
@@ -870,6 +896,7 @@ endif
 
 # OpenBSD
 ifeq ($(OS_TARGET),openbsd)
+BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
 FPCMADE=fpcmade.openbsd
@@ -890,6 +917,7 @@ endif
 
 # OS/2
 ifeq ($(OS_TARGET),os2)
+BATCHEXT=.cmd
 PPUEXT=.ppo
 ASMEXT=.so2
 OEXT=.oo2
@@ -928,6 +956,7 @@ endif
 
 # BeOS
 ifeq ($(OS_TARGET),beos)
+BATCHEXT=.sh
 PPUEXT=.ppu
 ASMEXT=.s
 OEXT=.o
@@ -940,6 +969,7 @@ endif
 
 # Solaris
 ifeq ($(OS_TARGET),sunos)
+BATCHEXT=.sh
 PPUEXT=.ppu
 ASMEXT=.s
 OEXT=.o
@@ -952,6 +982,7 @@ endif
 
 # QNX
 ifeq ($(OS_TARGET),qnx)
+BATCHEXT=.sh
 PPUEXT=.ppu
 ASMEXT=.s
 OEXT=.o
@@ -978,13 +1009,15 @@ endif
 
 # MacOS
 ifeq ($(OS_TARGET),macos)
+BATCHEXT=
 PPUEXT=.ppu
 ASMEXT=.s
 OEXT=.o
 SMARTEXT=.sl
 STATICLIBEXT=.a
 EXEEXT=
-FPCMADE=fpcmade.mcc
+DEBUGSYMEXT=.xcoff
+FPCMADE=fpcmade.macos
 endif
 
 #end of target specific settings
@@ -1053,7 +1086,7 @@ RC=$(RCPROG)
 AR=$(ARPROG)
 
 # ppas.bat / ppas.sh
-PPAS=ppas$(BATCHEXT)
+PPAS=ppas$(SRCBATCHEXT)
 
 # ldconfig to rebuild .so cache
 ifdef inUnix
@@ -1631,7 +1664,7 @@ endif
 # the path separator
 ifdef USEZIPWRAPPER
 ZIPPATHSEP=$(PATHSEP)
-ZIPWRAPPER=$(subst /,$(PATHSEP),$(DIST_DESTDIR)/fpczip$(BATCHEXT))
+ZIPWRAPPER=$(subst /,$(PATHSEP),$(DIST_DESTDIR)/fpczip$(SRCBATCHEXT))
 else
 ZIPPATHSEP=/
 endif
@@ -1725,8 +1758,11 @@ endif
 ifdef LIB_NAME
         -$(DEL) $(LIB_NAME) $(LIB_FULLNAME)
 endif
+ifdef DEBUGSYMEXT
+        -$(DEL) *$(DEBUGSYMEXT)
+endif
         -$(DEL) $(FPCMADE) Package.fpc $(PPAS) script.res link.res $(FPCEXTFILE) $(REDIRFILE)
-
+		
 fpc_distclean: clean
 
 # Also run clean first if targetdir is set. Unittargetdir is always
@@ -1742,6 +1778,7 @@ endif
         -$(DEL) *$(OEXT) *$(PPUEXT) *$(RSTEXT) *$(ASMEXT) *$(STATICLIBEXT) *$(SHAREDLIBEXT) *$(PPLEXT)
         -$(DELTREE) *$(SMARTEXT)
         -$(DEL) $(FPCMADE) Package.fpc $(PPAS) script.res link.res $(FPCEXTFILE) $(REDIRFILE)
+        -$(DEL) *_ppas$(BATCHEXT)
 ifdef AOUTEXT
         -$(DEL) *$(AOUTEXT)
 endif
